Scrollbar bugfix

--- a/css/grid.css
+++ b/css/grid.css
@@ -47,12 +47,12 @@ body {
       text-align: justify;
   }
 
-  .left {
+  .right {
     background-color: rgba(240, 236, 183, 0.747);
     padding: 0 25px 0 15px;
   }
 
-  .left p {
+  .right p {
       font-size: 18px;
       text-align: justify;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
@@ -63,15 +63,19 @@ body {
       grid-column-end: 4;
       background-color: rgb(179, 180, 176);
       text-align: center;
-      padding-top: 10px;
+      padding-top: 10px;      
+      padding-bottom: 10px;
       font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
   }
 
   /*Responsive*/
 
   @media only screen and (max-width:600px){
+    body {
+          overflow-x: hidden;
+    }
     .grid-container {
-        grid-template-columns: 100%;
+        grid-template-columns: calc(100% - 17px);
         grid-template-rows: auto;
     }
     .change {
